Implement device management features with pagination, DTOs, and OpenAPI documentation